fix: nudge checkbox up 1px on desktop and mobile for visual alignment

--- a/style.css
+++ b/style.css
@@ -95,6 +95,8 @@
         display: inline-flex;
         align-items: center;
         margin: 0;
+        position: relative;
+        top: -1px;
     }
 
     .editor-content ul[data-type="taskList"] li > label input[type="checkbox"],
@@ -10684,6 +10686,8 @@
         align-items: center !important;
         margin: 0 !important;
         padding: 0 !important;
+        position: relative !important;
+        top: -1px !important;
     }
 
     .editor-content ul[data-type="taskList"] li > label input[type="checkbox"],
